--- a/partnerships.html
+++ b/partnerships.html
@@ -39,7 +39,7 @@
                 <ul>
                     <li><a href="advocacy.html">Advocacy</a></li>
                     <li><a href="mobilisation.html">Mobilisation</a></li>
-                    <li class="fh5co-active"><a href="Partnerships.html">Partnerships</a></li>
+                    <li class="fh5co-active"><a href="partnerships.html">Partnerships</a></li>
                     <li><a href="networks.html">Networks</a></li>
                 </ul>
             </nav>
