--- a/networks.html
+++ b/networks.html
@@ -37,7 +37,7 @@
                 <ul>
                     <li><a href="advocacy.html">Advocacy</a></li>
                     <li><a href="mobilisation.html">Mobilisation</a></li>
-                    <li><a href="Partnerships.html">partnerships</a></li>
+                    <li><a href="partnerships.html">Partnerships</a></li>
                     <li class="fh5co-active"><a href="networks.html">Networks</a></li>
                 </ul>
             </nav>
