--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li>
                         <a href="advocacy.html">Advocacy</a>
                         <a href="mobilisation.html">Mobilisation</a>
-                        <a href="Partnerships.html">Partnerships</a>
+                        <a href="partnerships.html">Partnerships</a>
                         <a href="networks.html">Networks</a>
                     </li>
                 </ul>
