--- a/partnerships.html
+++ b/partnerships.html
@@ -32,7 +32,7 @@
         <aside id="side-nav">
             <img src="img/potrait.png" alt="" srcset="">
             <h1 id="logo">
-                <a href="index.html">Full Name</a>
+                <a href="index.html">Tirelo Molotlegi</a>
             </h1>
             <hr>
             <nav id="main-menu">
@@ -51,7 +51,7 @@
 					<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 
 				</ul>
-                <p><small>&copy; 2023 Full Name. All Rights Reserved.</span> <span>Designed by <a href="http:seasons" target="_blank">Seasons Digital</a> </span> </small></p>
+                <p><small>&copy; 2023 Tirelo Molotlegi. All Rights Reserved.</span> <span>Designed by <a href="http:seasons" target="_blank">Seasons Digital</a> </span> </small></p>
             </div>
         </aside>
         <div id="main">
