--- a/advocacy.html
+++ b/advocacy.html
@@ -58,9 +58,33 @@
                 <img src="img/img-2.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
-                    <h2><a href="single.html">How to be an effective web developer</a></h2>
+                    <h2><a data-toggle="modal" data-target="#exampleModalLong">How to be an effective web developer</a></h2>
                     <p>How two simple exercises changed my life</p>
                 </div>
+                    <!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            weights isn’t a chore to clean out a closet – it’s what saved her life. Walcott was not always a world-champion powerlifter. Born and raised in the U.S. Virgin Islands, Walcott was active throughout her childhood and adolescence.
+
+            Her life hit a turning point when she decided to start living for her two kids rather than herself. At the time that she made this decision, she had reached around 450 pounds. She then started going to the gym in 2016, and in that first year alone, she lost 100 pounds.  
+            
+            Walcott admits, “I felt like I was slowly dying, and I needed to do something, and the easiest thing was to go to a gym because most of them are open 24 hours, and that's kind of what I did. So I walked into a gym, I saw people lifting, and boom, I fell in love.”
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">View Article</button>
+        </div>
+      </div>
+    </div>
+  </div>
             </div>
             <hr>
             <div class="story-entry padding">
