Popup position update
Centered popoup

--- a/advocacy.html
+++ b/advocacy.html
@@ -66,7 +66,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">How two simple exercises changed my life</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -79,8 +79,8 @@
             Walcott admits, “I felt like I was slowly dying, and I needed to do something, and the easiest thing was to go to a gym because most of them are open 24 hours, and that's kind of what I did. So I walked into a gym, I saw people lifting, and boom, I fell in love.”
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">View Article</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close</button>
+         <a href="https://www.google.com/"><button type="button" class="btn btn-primary ">View Article</button></a> 
         </div>
       </div>
     </div>
