--- a/advocacy.html
+++ b/advocacy.html
@@ -29,7 +29,7 @@
     <div id="holder">
         <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
         <aside id="side-nav">
-            <img src="img/potrait.png" alt="" srcset="">
+            <img src="img/DP.jpg" alt="" srcset="">
             <h1 id="logo">
                 <a href="index.html">Tirelo Molotlegi</a>
             </h1>
@@ -55,7 +55,7 @@
         </aside>
         <div id="main">
             <div class="story-entry padding">
-                <img src="img/img-2.jpg" alt="">
+                <img src="img/Dakla.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
                     <h2><a data-toggle="modal" data-target="#exampleModalLong">How to be an effective web developer</a></h2>
@@ -88,7 +88,7 @@
             </div>
             <hr>
             <div class="story-entry padding">
-                <img src="img/img-3.jpg" alt="">
+                <img src="img/BDI.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
                     <h2><a href="single.html">How to be an effective web developer</a></h2>
@@ -97,7 +97,7 @@
             </div>
             <hr>
             <div class="story-entry padding">
-                <img src="img/img-4.jpg" alt="">
+                <img src="img/Ambassador.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
                     <h2><a href="single.html">How to be an effective web developer</a></h2>
@@ -106,7 +106,7 @@
             </div>
             <hr>
             <div class="story-entry padding">
-                <img src="img/img-5.jpg" alt="">
+                <img src="img/andbank-1.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
                     <h2><a href="single.html">How to be an effective web developer</a></h2>
