--- a/mobilisation.html
+++ b/mobilisation.html
@@ -29,7 +29,7 @@
     <div id="holder">
         <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
         <aside id="side-nav">
-            <img src="img/potrait.png" alt="" srcset="">
+            <img src="img/DP.jpg" alt="" srcset="">
             <h1 id="logo">
                 <a href="index.html">Tirelo Molotlegi</a>
             </h1>
@@ -59,7 +59,7 @@
                 <div class="row row-bottom-padded-md">
                     <div class="col-lg-4 col-md-4">
 						<div class="mobilisation-blog animate-box">
-							<a href="#"><img class="img-responsive" src="img/img-1.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="img/CCBSA.jpeg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
 									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
@@ -73,7 +73,7 @@
 					</div>
                     <div class="col-lg-4 col-md-4">
 						<div class="mobilisation-blog animate-box">
-							<a href="#"><img class="img-responsive" src="img/img-2.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="img/PW.Jpg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
 									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
@@ -87,7 +87,7 @@
 					</div>
                     <div class="col-lg-4 col-md-4">
 						<div class="mobilisation-blog animate-box">
-							<a href="#"><img class="img-responsive" src="img/img-3.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="img/PP.jpg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
 									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
@@ -101,7 +101,7 @@
 					</div>
                     <div class="col-lg-4 col-md-4">
 						<div class="mobilisation-blog animate-box">
-							<a href="#"><img class="img-responsive" src="img/img-1.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="img/TT.jpeg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
 									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
@@ -115,7 +115,7 @@
 					</div>
                     <div class="col-lg-4 col-md-4">
 						<div class="mobilisation-blog animate-box">
-							<a href="#"><img class="img-responsive" src="img/img-6.jpg" alt=""></a>
+							<a href="#"><img class="img-responsive" src="img/PL.jpeg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
 									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
