--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="holder">
         <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
         <aside id="side-nav">
-            <img src="img/potrait.png" alt="" srcset="">
+            <img src="img/DP.jpg" alt="" srcset="">
             <h1 id="logo">
                 <a href="index.html">Tirelo Molotlegi</a>
             </h1>
