--- a/mobilisation.html
+++ b/mobilisation.html
@@ -62,13 +62,19 @@
 							<a href="#"><img class="img-responsive" src="img/CCBSA.jpeg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
-									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
+									<h3><a href=""#> CCBSA & Thuto-Thebe </a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
-							</div> 
+							</div>
+							<!-- Coca-Cola Beverages South Africa (CCBSA) recently partnered with the Thuto-Thebe Foundation and Caring for Girls organisation
+								 to donate sanitary towels to the value of R120 000 for learners. Her Royal Highness, Princess Tirelo Molotlegi is spearheading
+								 this campaign through their foundation Thuto-Thebe, which aims to improve the quality of education in South Africa for a more
+								 sustainable future. The launch held at the Kutlwanong School of the Deaf resulted in over 250 learners from their school and
+								 learners from surrounding schools receiving sanitary towels. The Caring for Girls foundation was formed by Richard Mabaso who
+								 took up this worthy cause to provide girls with much needed sanitary towels from an underprivileged background. --> 
 						</div>
 					</div>
                     <div class="col-lg-4 col-md-4">
@@ -76,7 +82,7 @@
 							<a href="#"><img class="img-responsive" src="img/PW.Jpg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
-									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
+									<h3><a href=""#>Starlight Global</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -96,7 +102,17 @@
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
-							</div> 
+							</div>
+							<!-- Starlight Global, a Bahamas-based charity, held a "Night Of Inspiration" in Johannesburg this month. Guests were treated to a 
+								delicious dinner with Sibongile Mngoma and a string quartet. Andbank, a family-owned Fitch-rated A-boutique private bank,
+								sponsored the event and made a donation to the Joburg Ballet Company. Juan Iglesias, CEO of Andbank (Bahamas) Limited, expressed
+								the excitement of visiting the continent for the first time. The event was attended by South Africa's former Central Bank Governor, 
+								Emeritus Tito Mboweni, Political Analyst Moeletsi Mbeki, Princess Tirelo Molotlegi of the Royal Bafokeng Nation, Ms. Josina Machel, 
+								Nkosinathi Biko, NBA's Managing Director for Africa, and other guests from Botswana and Zambia. All guests received a signed copy of
+								Dr. Myles Munroe's latest book and chocolates from Bahamian Chocolatier, Graycliffe. During their stay in Phokeng, they visited the 
+								eco-friendly College of the Royal Bafokeng, Lebone II, and the Royal Bafokeng Administration, where the "Masterplan" for 2035 was 
+								presented.The current King, Kgosi Leruo Tshekedi Molotlegi, is the 36th recorded King and the 15th in a direct father-son line. 
+								Gruner is inspired by the vision of the Royal Bafokeng Nation and believes that the future belongs to Africa and communities like these that possess the right visionary leadership. --> 
 						</div>
 					</div>
                     <div class="col-lg-4 col-md-4">
@@ -111,6 +127,17 @@
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
 							</div> 
+							<!-- Princess Tirelo Molotlegi is a real princess who works with the National Basketball Association to expand a successful after-school 
+								 NBA basketball/mentoring program in Phokeng, South Africa. For two to three hours a day, five days a week, three retired NBA players
+								 mentor a dozen youth, giving them one-on-one attention as well as group training through basketball. The program teaches essential 
+								 life lessons such as the importance of teamwork, confidence, self esteem, motivation and exercise. Princess Tirelo admits that the 
+								 kids took such a liking to basketball since the big sports in that region are rugby and soccer. She believes one major factor in the
+								 interest and success of the program is the attention, support and love each student receives from the coaches.
+								 Princess Tirelo is passionate about inspiring the youth and helping them discover their authentic selves. The NBA program led by her 
+								 brother, King Kgosi Leruo Molotlegi, has changed the lives of students in remarkable ways. Princess Tirelo and her family have big 
+								 plans on expanding the program and getting more NBA involvement with the goal of engaging, educating and inspiring these future 
+								 leaders to discover what makes them authentically special. To help them grow, one can donate to support education in Africa through 
+								 Thuto Thebe Educational Trust, volunteer their program design or business development skills, or become a strategic partner.-->
 						</div>
 					</div>
                     <div class="col-lg-4 col-md-4">
