--- a/mobilisation.html
+++ b/mobilisation.html
@@ -55,15 +55,15 @@
         </aside>
         <div id="main">
             <div class="narrow-content">
-                <h2>Mobilisation</h2>
+                <h2 style = "font-size: 35px; color: black; font-family: Times;"> Mobilisation</h2>
                 <div class="row row-bottom-padded-md">
                     <div class="col-lg-4 col-md-4">
 						<div class="mobilisation-blog animate-box">
 							<a href="#"><img class="img-responsive" src="img/CCBSA.jpeg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
-									<h3><a href=""#> CCBSA & Thuto-Thebe </a></h3>
-									<span class="posted_by">Sep. 15th</span>
+									<h3 style = "font-family: Times;" ><a href=""#>Thuto-Thebe Educational Trust</a></h3>
+									<span class="posted_by">CCBSA</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
@@ -82,13 +82,14 @@
 							<a href="#"><img class="img-responsive" src="img/PW.Jpg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
-									<h3><a href=""#>Starlight Global</a></h3>
-									<span class="posted_by">Sep. 15th</span>
+									<h3 style = "font-family: Times;" ><a href=""#> Platinum Weekly</a></h3>
+									<span class="posted_by">Edward Patrick Lebone Memorial</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
 							</div> 
+							
 						</div>
 					</div>
                     <div class="col-lg-4 col-md-4">
@@ -96,8 +97,8 @@
 							<a href="#"><img class="img-responsive" src="img/PP.jpg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
-									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
-									<span class="posted_by">Sep. 15th</span>
+									<h3 style = "font-family: Times;" ><a href=""#>Starlight Global</a></h3>
+									<span class="posted_by">Royal Bafokeng Holdings</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
@@ -120,8 +121,8 @@
 							<a href="#"><img class="img-responsive" src="img/TT.jpeg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
-									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
-									<span class="posted_by">Sep. 15th</span>
+									<h3 style = "font-family: Times;" ><a href=""#> Tea with Toan</a></h3>
+									<span class="posted_by">USA</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
@@ -145,8 +146,8 @@
 							<a href="#"><img class="img-responsive" src="img/PL.jpeg" alt=""></a>
 							<div class="mobilisation-text">
 								<div class="prod-title">
-									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
-									<span class="posted_by">Sep. 15th</span>
+									<h3 style = "font-family: Times;" ><a href=""#> Charity Polo Events</a></h3>
+									<span class="posted_by">Royal Marang Hotel</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
