--- a/networks.html
+++ b/networks.html
@@ -71,9 +71,9 @@
                     </div>
                     <div class="col-md-3 col-sm-6 col-padding animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
                         <div class="Partnerships-entry">
-							<a href="#" class="Partnerships-img"><img src="img/NBA.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+							<a href="#" class="Partnerships-img"><img src="img/Ambassador.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">NBA</a></h3>
+								<h3><a href="#">Ambassadors</a></h3>
 								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
 								
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
