--- a/advocacy.html
+++ b/advocacy.html
@@ -58,8 +58,8 @@
                 <img src="img/Dakla.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
-                    <h2><a data-toggle="modal" data-target="#exampleModalLong"> African Women's Forum</a></h2>
-                    <p>Crans Montana Forum on Africa & South-South Cooperation</p>
+                    <h2 style = "font-family: Times;"><a data-toggle="modal" data-target="#exampleModalLong"> African Women's Forum</a></h2>
+                    <p style = "font-family: Optima;">Crans Montana Forum on Africa & South-South Cooperation</p>
                 </div>
                     <!-- Modal -->
                 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
@@ -97,8 +97,8 @@
                 <img src="img/NBA.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
-                    <h2><a data-toggle="modal" data-target="#exampleModalLong"> Inspire Confidence in Youth</a></h2>
-                    <p>NBA Africa</p>
+                    <h2 style = "font-family: Times;"><a data-toggle="modal" data-target="#exampleModalLong"> Inspire Confidence in Youth</a></h2>
+                    <p style = "font-family: Optima;">NBA Africa</p>
                 </div>
                 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                     <div class="modal-dialog" role="document">
@@ -139,8 +139,8 @@
                 <img src="img/BDI.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
-                    <h2><a data-toggle="modal" data-target="#exampleModalLong">How to be an effective web developer</a></h2>
-                    <p>How two simple exercises changed my life</p>
+                    <h2 style = "font-family: Times;"><a data-toggle="modal" data-target="#exampleModalLong">How to be an effective web developer</a></h2>
+                    <p style = "font-family: Optima;">How two simple exercises changed my life</p>
                 </div>
                 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                     <div class="modal-dialog" role="document">
