--- a/networks.html
+++ b/networks.html
@@ -62,8 +62,8 @@
                         <div class="Partnerships-entry">
 							<a href="#" class="Partnerships-img"><img src="img/NF.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">NAFUICO</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+								<h3 style = "font-family: Times;"><a href="#">NAFUICO</a></h3>
+								<span style = "font-family: Optima;" ><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
 								
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
@@ -73,8 +73,8 @@
                         <div class="Partnerships-entry">
 							<a href="#" class="Partnerships-img"><img src="img/Ambassador.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Ambassadors</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+								<h3 style = "font-family: Times;"><a href="#">Ambassadors</a></h3>
+								<span style = "font-family: Optima;"><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
 								
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
@@ -84,8 +84,8 @@
                         <div class="Partnerships-entry">
 							<a href="#" class="Partnerships-img"><img src="img/Polo.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
-								<h3><a href="#">Polo</a></h3>
-								<span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+								<h3 style = "font-family: Times;"><a href="#">Polo</a></h3>
+								<span style = "font-family: Optima;"><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
 		
 								<a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
 							</div>
