--- a/mobilisation.html
+++ b/mobilisation.html
@@ -65,7 +65,7 @@
 									<h3 style = "font-family: Times;" ><a href=""#>Thuto-Thebe Educational Trust</a></h3>
 									<span class="posted_by">CCBSA</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p style = "font-family: Optima;" >Fa far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
 							</div>
@@ -85,7 +85,7 @@
 									<h3 style = "font-family: Times;" ><a href=""#> Platinum Weekly</a></h3>
 									<span class="posted_by">Edward Patrick Lebone Memorial</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p style = "font-family: Optima;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
 							</div> 
@@ -100,7 +100,7 @@
 									<h3 style = "font-family: Times;" ><a href=""#>Starlight Global</a></h3>
 									<span class="posted_by">Royal Bafokeng Holdings</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p style = "font-family: Optima;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
 							</div>
@@ -124,7 +124,7 @@
 									<h3 style = "font-family: Times;" ><a href=""#> Tea with Toan</a></h3>
 									<span class="posted_by">USA</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p style = "font-family: Optima;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
 							</div> 
@@ -149,7 +149,7 @@
 									<h3 style = "font-family: Times;" ><a href=""#> Charity Polo Events</a></h3>
 									<span class="posted_by">Royal Marang Hotel</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p style = "font-family: Optima;">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
 							</div> 
