--- a/networks.html
+++ b/networks.html
@@ -56,7 +56,7 @@
         </aside>
         <div id="main">
             <div class="narrow-content">
-                <h2>Networks</h2>
+                <h2 style = "font-size: 35px; color: black; font-family: Times;">Networks</h2>
                 <div id="justify" class="row row-bottom-padded-md">
                     <div class="col-md-3 col-sm-6 col-padding animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
                         <div class="Partnerships-entry">
