--- a/partnerships.html
+++ b/partnerships.html
@@ -54,7 +54,7 @@
         </aside>
         <div id="main">
             <div class="narrow-content">
-                <h2>Partnerships</h2>
+                <h2 style = "font-size: 35px; color: black; font-family: Times;">Partnerships</h2>
                 <div class="row row-bottom-padded-md">
                     <div class="col-md-3 col-sm-6 col-padding animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
                         <div class="network-entry">
@@ -152,12 +152,7 @@
                         </div>
                     </div>
                 </div>
-                </div>
-
-               
-
-              
-
+                </div> 
             </div>
         </div>
     </div>
