--- a/advocacy.html
+++ b/advocacy.html
@@ -54,10 +54,11 @@
             </div>
         </aside>
         <div id="main">
+         <!-- <h2 style = "font-size: 35px; color: black; font-family: Times;">Advocacy</h2>-->
             <div class="story-entry padding">
                 <img src="img/Dakla.jpg" alt="">
                 <div>
-                    <span class="story-post-date">October 12, 2023</span>
+                    <span style = "font-family: Palatino;" >October 12, 2023</span>
                     <h2 style = "font-family: Times;"><a data-toggle="modal" data-target="#exampleModalLong"> African Women's Forum</a></h2>
                     <p style = "font-family: Optima;">Crans Montana Forum on Africa & South-South Cooperation</p>
                 </div>
@@ -96,7 +97,7 @@
             <div class="story-entry padding">
                 <img src="img/NBA.jpg" alt="">
                 <div>
-                    <span class="story-post-date">October 12, 2023</span>
+                    <span style = "font-family: Palatino;">October 12, 2023</span>
                     <h2 style = "font-family: Times;"><a data-toggle="modal" data-target="#exampleModalLong"> Inspire Confidence in Youth</a></h2>
                     <p style = "font-family: Optima;">NBA Africa</p>
                 </div>
@@ -138,7 +139,7 @@
             <div class="story-entry padding">
                 <img src="img/BDI.jpg" alt="">
                 <div>
-                    <span class="story-post-date">October 12, 2023</span>
+                    <span style = "font-family: Palatino;">October 12, 2023</span>
                     <h2 style = "font-family: Times;"><a data-toggle="modal" data-target="#exampleModalLong">How to be an effective web developer</a></h2>
                     <p style = "font-family: Optima;">How two simple exercises changed my life</p>
                 </div>
