--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="CSS/animate.css">
 	<!-- Icomoon Icon Fonts-->
 	<link rel="stylesheet" href="CSS/icomoon.css">
+
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="CSS/bootstrap.css">
 	<!-- Flexslider  -->
@@ -36,12 +37,13 @@
             <hr>
             <nav id="main-menu">
                 <ul>
-                    <li>
-                        <a href="advocacy.html">Advocacy</a>
-                        <a href="mobilisation.html">Mobilisation</a>
-                        <a href="partnerships.html">Partnerships</a>
-                        <a href="networks.html">Networks</a>
-                    </li>
+                    
+                        <li class="fh5co-active"><a href="index.html">Home</a></li>
+                        <li><a href="advocacy.html">Advocacy</a></li>
+                        <li><a href="mobilisation.html">Mobilisation</a></li>
+                        <li><a href="partnerships.html">Partnerships</a></li>
+                        <li><a href="networks.html">Networks</a></li>
+                    
                 </ul>
             </nav>
             <div class="menu-footer">
