--- a/advocacy.html
+++ b/advocacy.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="CSS/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="CSS/bootstrap.css">
+  <!--link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"-->
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="CSS/flexslider.css">
 	<!-- Theme style  -->
@@ -36,6 +37,7 @@
             <hr>
             <nav id="main-menu">
                 <ul>
+                  <li><a href="index.html">Home</a></li>
                     <li class="fh5co-active"><a href="advocacy.html">Advocacy</a></li>
                     <li><a href="mobilisation.html">Mobilisation</a></li>
                     <li><a href="partnerships.html">Partnerships</a></li>
@@ -54,15 +56,16 @@
             </div>
         </aside>
         <div id="main">
-            <div class="story-entry padding">
-                <img src="img/Dakla.jpg" alt="">
+          
+            <div class="story-entry ">
+              <img src="img/Dakla.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
-                    <h2><a data-toggle="modal" data-target="#exampleModalLong">How to be an effective web developer</a></h2>
+                    <h2><a data-toggle="modal" data-target="#advocacy-popup1">How to be an effective web developer</a></h2>
                     <p>How two simple exercises changed my life</p>
                 </div>
                     <!-- Modal -->
-                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal fade" id="advocacy-popup1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -72,12 +75,14 @@
           </button>
         </div>
         <div class="modal-body">
-          The Queen Mother of the Royal Bafokeng nation, Dr Semane Molotlegi, hosted a charity polo match with her Daughter Tirelo Molotlegi. 
-          The event was in association with Motsweding FM, La Martina and Aveng Grinaker-LTA and featured top international, South African 
-          and African polo players. Matches of three players a side are played on smaller grass fields that are fully boarded all around. 
-          The curtain raiser is a three-a-side match featuring two international women who have represented both South Africa and Zimbabwe, 
-          playing alongside top male international players. Princess Tirelo Molotlegi of the Royal Bafokeng said this was the first time 
-          action polo would be played in the North West and proceeds from the cup will go to The Girl Guides Association of SA and Thuto Thebe Educational Fund.
+          <p>
+            The Queen Mother of the Royal Bafokeng nation, Dr Semane Molotlegi, hosted a charity polo match with her Daughter Tirelo Molotlegi. 
+            The event was in association with Motsweding FM, La Martina and Aveng Grinaker-LTA and featured top international, South African 
+            and African polo players. Matches of three players a side are played on smaller grass fields that are fully boarded all around. 
+            The curtain raiser is a three-a-side match featuring two international women who have represented both South Africa and Zimbabwe, 
+            playing alongside top male international players. Princess Tirelo Molotlegi of the Royal Bafokeng said this was the first time 
+            action polo would be played in the North West and proceeds from the cup will go to The Girl Guides Association of SA and Thuto Thebe Educational Fund.
+          </p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close</button>
@@ -92,10 +97,10 @@
                 <img src="img/BDI.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
-                    <h2><a data-toggle="modal" data-target="#exampleModalLong">How to be an effective web developer</a></h2>
+                    <h2><a data-toggle="modal" data-target="#advocacy-popup2">How to be an effective web developer</a></h2>
                     <p>How two simple exercises changed my life</p>
                 </div>
-                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                <div class="modal fade" id="advocacy-popup2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
@@ -105,12 +110,14 @@
                           </button>
                         </div>
                         <div class="modal-body">
-                          The Queen Mother of the Royal Bafokeng nation, Dr Semane Molotlegi, hosted a charity polo match with her Daughter Tirelo Molotlegi. 
-                          The event was in association with Motsweding FM, La Martina and Aveng Grinaker-LTA and featured top international, South African 
-                          and African polo players. Matches of three players a side are played on smaller grass fields that are fully boarded all around. 
-                          The curtain raiser is a three-a-side match featuring two international women who have represented both South Africa and Zimbabwe, 
-                          playing alongside top male international players. Princess Tirelo Molotlegi of the Royal Bafokeng said this was the first time 
-                          action polo would be played in the North West and proceeds from the cup will go to The Girl Guides Association of SA and Thuto Thebe Educational Fund.
+                            <p>
+                              2The Queen Mother of the Royal Bafokeng nation, Dr Semane Molotlegi, hosted a charity polo match with her Daughter Tirelo Molotlegi. 
+                              The event was in association with Motsweding FM, La Martina and Aveng Grinaker-LTA and featured top international, South African 
+                              and African polo players. Matches of three players a side are played on smaller grass fields that are fully boarded all around. 
+                              The curtain raiser is a three-a-side match featuring two international women who have represented both South Africa and Zimbabwe, 
+                              playing alongside top male international players. Princess Tirelo Molotlegi of the Royal Bafokeng said this was the first time 
+                              action polo would be played in the North West and proceeds from the cup will go to The Girl Guides Association of SA and Thuto Thebe Educational Fund.
+                            </p>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close</button>
