--- a/networks.html
+++ b/networks.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="CSS/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="CSS/bootstrap.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="CSS/flexslider.css">
 	<!-- Theme style  -->
@@ -37,6 +37,7 @@
             <hr>
             <nav id="main-menu">
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="advocacy.html">Advocacy</a></li>
                     <li><a href="mobilisation.html">Mobilisation</a></li>
                     <li><a href="partnerships.html">Partnerships</a></li>
