--- a/partnerships.html
+++ b/partnerships.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="CSS/icomoon.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="CSS/bootstrap.css">
+
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="CSS/flexslider.css">
 	<!-- Theme style  -->
@@ -35,6 +36,7 @@
             <hr>
             <nav id="main-menu">
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="advocacy.html">Advocacy</a></li>
                     <li><a href="mobilisation.html">Mobilisation</a></li>
                     <li class="fh5co-active"><a href="partnerships.html">Partnerships</a></li>
