--- a/advocacy.html
+++ b/advocacy.html
@@ -134,10 +134,10 @@
                 <img src="img/Ambassador.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
-                    <h2><a data-toggle="modal" data-target="#exampleModalLong">How to be an effective web developer</a></h2>
+                    <h2><a data-toggle="modal" data-target="#advocacy-popup3">How to be an effective web developer</a></h2>
                     <p>How two simple exercises changed my life</p>
                 </div>
-                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                <div class="modal fade" id="advocacy-popup3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
@@ -166,10 +166,10 @@
                 <img src="img/andbank-1.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
-                    <h2><a data-toggle="modal" data-target="#exampleModalLong"> How to be an effective web developer</a></h2>
+                    <h2><a data-toggle="modal" data-target="#advocacy-popup4"> How to be an effective web developer</a></h2>
                     <p>How two simple exercises changed my life</p>
                 </div>
-                <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                <div class="modal fade" id="advocacy-popup4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
