--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <img src="img/DAKLA.jpeg" alt="" srcset="">
                     </div>
                     <div class="center-content">
-                        <h2 class="main-quote">“To deny people their human rights is to challenge their very humanity.”
+                        <h2 class="main-quote">“To deny people their human rights is to challenge their very humanity.” <br>
                             — Nelson Mandela</h2>
                         <p class="quote">Reallocation is often promoted as a response to water security dilemmas in the western United States. Water banking is a form of reallocation utilized in several states to facilitate temporary water rights transfers</p>
                         <p>sjhafshgfhdg</p>
@@ -48,16 +48,21 @@
                     </div>
                     <div class="tabs fixed-bottom">
                         <div class="tab-item text-center">
-                            <a href="advocacy.html"><i class="fa fa-user fa-3x text-center" data-toggle="tootltip" data-placement="top" title="Learn more about me">
+                            <a href="advocacy.html"><i class="fa fa-gavel fa-3x text-center" data-toggle="tootltip" data-placement="top" title="Learn more about me">
                               <h3>ADVOCACY</h3></i>
                             </a>
                           </div>
                         <div class="tab-item text-center">
-                        <a href="mobilisation.html"><i class="fa fa-user fa-3x text-center" data-toggle="tootltip" data-placement="top" title="Learn more about me">
+                        <a href="mobilisation.html"><i class="fa fa-hand-o-up fa-3x text-center" data-toggle="tootltip" data-placement="top" title="Learn more about me">
                           <h3>MOBILISATION</h3></i>
                         </a>
                       </div>
-                                         
+
+                       <div class="tab-item text-center">
+                        <a href="mobilisation.html"><i class="fa fa-handshake-o fa-3x text-center" data-toggle="tootltip" data-placement="top" title="Learn more about me">
+                          <h3>PARTNERSHIP</h3></i>
+                        </a>
+                      </div>                   
                        
                       <div class="tab-item text-center">
                         <a href="networks.html"><i class="fa fa-users fa-3x" data-toggle="tootltip" data-placement="top" title="Contact me">
