--- a/advocacy.html
+++ b/advocacy.html
@@ -57,6 +57,7 @@
         </aside>
         <div id="main">
          
+           <!--
             <div class="story-entry ">
               <div class="story-img">
                 <img src="img/Dakla.jpg" alt="">
@@ -66,35 +67,45 @@
                     <h2><a data-toggle="modal" data-target="#advocacy-popup1">How to be an effective web developer</a></h2>
                     <p>How two simple exercises changed my life</p>
                 </div>
-                    <!-- Modal -->
+                     Modal
         <div class="modal fade" id="advocacy-popup1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title" id="exampleModalLongTitle">How two simple exercises changed my life</h4>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p>
-            The Queen Mother of the Royal Bafokeng nation, Dr Semane Molotlegi, hosted a charity polo match with her Daughter Tirelo Molotlegi. 
-            The event was in association with Motsweding FM, La Martina and Aveng Grinaker-LTA and featured top international, South African 
-            and African polo players. Matches of three players a side are played on smaller grass fields that are fully boarded all around. 
-            The curtain raiser is a three-a-side match featuring two international women who have represented both South Africa and Zimbabwe, 
-            playing alongside top male international players. Princess Tirelo Molotlegi of the Royal Bafokeng said this was the first time 
-            action polo would be played in the North West and proceeds from the cup will go to The Girl Guides Association of SA and Thuto Thebe Educational Fund.
-          </p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close</button>
-         <a href="https://www.google.com/"><button type="button" class="btn btn-primary ">View Article</button></a> 
-        </div>
-      </div>
-    </div>
-                </div>
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="exampleModalLongTitle">How two simple exercises changed my life</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p>
+                  The Queen Mother of the Royal Bafokeng nation, Dr Semane Molotlegi, hosted a charity polo match with her Daughter Tirelo Molotlegi. 
+                  The event was in association with Motsweding FM, La Martina and Aveng Grinaker-LTA and featured top international, South African 
+                  and African polo players. Matches of three players a side are played on smaller grass fields that are fully boarded all around. 
+                  The curtain raiser is a three-a-side match featuring two international women who have represented both South Africa and Zimbabwe, 
+                  playing alongside top male international players. Princess Tirelo Molotlegi of the Royal Bafokeng said this was the first time 
+                  action polo would be played in the North West and proceeds from the cup will go to The Girl Guides Association of SA and Thuto Thebe Educational Fund.
+                </p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close</button>
+               <a href="https://www.google.com/"><button type="button" class="btn btn-primary ">View Article</button></a> 
+              </div>
             </div>
+          </div>
+                      </div>
+                  </div>
+           --> 
+          
+           <div class="section">
+    <div class="content">
+      <img src="img/Dakla.jpg" alt="Blog Image">
+      <h2>Heading</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper velit et sem sagittis, in posuere neque semper.</p>
+    </div>
+  </div>
             <hr>
+
             <div class="story-entry padding">
                 <img src="img/BDI.jpg" alt="">
                 <div>
