--- a/mobilisation.html
+++ b/mobilisation.html
@@ -56,8 +56,16 @@
         </aside>
         <div id="main">
             <div class="narrow-content">
-                <h2 style = "font-size: 35px; color: black; font-family: Times;"> Mobilisation</h2>
-                <div class="row row-bottom-padded-md">
+
+                <div class="section">
+					<div class="content">
+					  <img src="img/Dakla.jpg" alt="Blog Image">
+					  <h2>Heading</h2>
+					  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper velit et sem sagittis, in posuere neque semper.</p>
+					</div>
+				  </div>
+                
+				<div class="row row-bottom-padded-md">
                     <div class="col-lg-4 col-md-4">
 						<div class="mobilisation-blog animate-box">
 							<a data-toggle="modal" data-target="#exampleModalLong1"><img class="img-responsive" src="img/CCBSA.jpeg" alt=""></a>
