--- a/networks.html
+++ b/networks.html
@@ -57,7 +57,15 @@
         </aside>
         <div id="main">
             <div class="narrow-content">
-                <h2 style = "font-size: 35px; color: black; font-family: Times;">Networks</h2>
+
+                <div class="section">
+  				  <div class="content">
+    				  <img src="img/Dakla.jpg" alt="Blog Image">
+   						   <h2>Heading</h2>
+     						 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper velit et sem sagittis, in posuere neque semper.</p>
+    </div>
+            </div>
+
                 <div id="justify" class="row row-bottom-padded-md">
 
                     <div class="col-md-3 col-sm-6 col-padding animate-box fadeInRight animated" data-animate-effect="fadeInRight">
