--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </section>
 
       <section id="section2" class="col-md-6">
-        <h1>TIRELO MOLOTLEGI</h1>
+        <h1 style = "font-family: Times;">TIRELO MOLOTLEGI</h1>
         <blockquote class="mt-4">“It is not our diversity which divides us; it is not our ethnicity, or religion or culture that divides us. Since we have achieved our freedom, there can only be one division amongst us: between those who cherish democracy and those who do not.” <br>
           — Nelson Mandela</blockquote>
           <div class="image-block">
