--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://use.fontawesome.com/fbaee93a28.js"></script>
-    <title>Advocacy</title>
+    <title>Home</title>
     <script src="https://use.fontawesome.com/fbaee93a28.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 	
@@ -36,6 +36,7 @@
       </section>
 
       <section id="section2" class="col-md-6">
+        <h1>TIRELO MOLOTLEGI</h1>
         <blockquote class="mt-4">“It is not our diversity which divides us; it is not our ethnicity, or religion or culture that divides us. Since we have achieved our freedom, there can only be one division amongst us: between those who cherish democracy and those who do not.” <br>
           — Nelson Mandela</blockquote>
           <div class="image-block">
@@ -50,25 +51,37 @@
 
                     <div class="tabs fixed-bottom">
                         <div class="tab-item text-center">
-                            <a href="advocacy.html"><i class="fa fa-gavel fa-3x text-center" data-toggle="tootltip" data-placement="top" title="Learn more about me">
-                              <h3>ADVOCACY</h3></i>
+                            <a href="advocacy.html">
+                              <div class="navi">
+                                <img src="img/advocacy.jpg" alt="">
+                              </div>
+                              <h3>ADVOCACY</h3>
                             </a>
                           </div>
                         <div class="tab-item text-center">
-                        <a href="mobilisation.html"><i class="fa fa-hand-o-up fa-3x text-center" data-toggle="tootltip" data-placement="top" title="Learn more about me">
-                          <h3>MOBILISATION</h3></i>
+                        <a href="mobilisation.html">
+                          <div class="navi">
+                            <img src="img/advocacy.jpg" alt="">
+                          </div>
+                          <h3>MOBILISATION</h3>
                         </a>
                       </div>
 
                        <div class="tab-item text-center">
-                        <a href="mobilisation.html"><i class="fa fa-handshake-o fa-3x text-center" data-toggle="tootltip" data-placement="top" title="Learn more about me">
-                          <h3>PARTNERSHIP</h3></i>
+                        <a href="mobilisation.html">
+                          <div class="navi">
+                            <img src="img/advocacy.jpg" alt="">
+                          </div>
+                          <h3>PARTNERSHIP</h3>
                         </a>
                       </div>                   
                        
                       <div class="tab-item text-center">
-                        <a href="networks.html"><i class="fa fa-users fa-3x" data-toggle="tootltip" data-placement="top" title="Contact me">
-                          <h3>NETWORKS</h3></i>
+                        <a href="networks.html">
+                          <div class="navi">
+                            <img src="img/advocacy.jpg" alt="">
+                          </div>
+                          <h3>NETWORKS</h3>
                         </a>
                         </div>
                       
