--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                             </a>
                           </div>
                         <div class="tab-item text-center">
-                        <a href="mobilisation.html">
+                        <a href="Partnerships.html">
                           <div class="navi">
                             <img src="img/advocacy.jpg" alt="">
                           </div>
-                          <h3>MOBILISATION</h3>
+                          <h3>Partnerships</h3>
                         </a>
                       </div>               
                        
