--- a/partnerships.html
+++ b/partnerships.html
@@ -38,7 +38,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="advocacy.html">Advocacy</a></li>
-                    <li><a href="mobilisation.html">Mobilisation</a></li>
+                    <li><a href="Partnerships.html">Partnerships</a></li>
                     <li class="fh5co-active"><a href="partnerships.html">Partnerships</a></li>
                     <li><a href="networks.html">Networks</a></li>
                 </ul>
