--- a/mobilisation.html
+++ b/mobilisation.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobilisation</title>
+    <title>Partnerships</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 	
@@ -38,7 +38,7 @@
                 <ul>
 					<li><a href="index.html">Home</a></li>
                     <li><a href="advocacy.html">Advocacy</a></li>
-                    <li class="fh5co-active"><a href="mobilisation.html">Mobilisation</a></li>
+                    <li class="fh5co-active"><a href="Partnerships.html">Partnerships</a></li>
                     <li><a href="networks.html">Networks</a></li>
                 </ul>
             </nav>
@@ -66,9 +66,9 @@
                 
 				<div class="row row-bottom-padded-md">
                     <div class="col-lg-4 col-md-4">
-						<div class="mobilisation-blog animate-box">
+						<div class="Partnerships-blog animate-box">
 							<a data-toggle="modal" data-target="#exampleModalLong1"><img class="img-responsive" src="img/CCBSA.jpeg" alt=""></a>
-							<div class="mobilisation-text">
+							<div class="Partnerships-text">
 								<div class="prod-title">
 									<h3 style = "font-family: Times;" ><a data-toggle="modal" data-target="#exampleModalLong1">Thuto-Thebe Educational Trust</a></h3>
 									<span class="posted_by">CCBSA</span>
@@ -110,9 +110,9 @@
 						</div>
 						</div>
                     <div class="col-lg-4 col-md-4">
-						<div class="mobilisation-blog animate-box">
+						<div class="Partnerships-blog animate-box">
 							<a data-toggle="modal" data-target="#exampleModalLong2"><img class="img-responsive" src="img/PW.Jpg" alt=""></a>
-							<div class="mobilisation-text">
+							<div class="Partnerships-text">
 								<div class="prod-title">
 									<h3><a href=""#>Starlight Global</a></h3>
 									<span class="posted_by">Sep. 15th</span>
@@ -124,9 +124,9 @@
 						</div>
 									</div>
                     <div class="col-lg-4 col-md-4">
-						<div class="mobilisation-blog animate-box">
+						<div class="Partnerships-blog animate-box">
 							<a data-toggle="modal" data-target="#exampleModalLong3"><img class="img-responsive" src="img/PP.jpg" alt=""></a>
-							<div class="mobilisation-text">
+							<div class="Partnerships-text">
 								<div class="prod-title">
 									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
 									<span class="posted_by">Sep. 15th</span>
@@ -171,9 +171,9 @@
 						</div>
 						</div>
                     <div class="col-lg-4 col-md-4">
-						<div class="mobilisation-blog animate-box">
+						<div class="Partnerships-blog animate-box">
 							<a data-toggle="modal" data-target="#exampleModalLong4"><img class="img-responsive" src="img/TT.jpeg" alt=""></a>
-							<div class="mobilisation-text">
+							<div class="Partnerships-text">
 								<div class="prod-title">
 									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
 									<span class="posted_by">Sep. 15th</span>
@@ -219,9 +219,9 @@
 								</div>
 											</div>
                     <div class="col-lg-4 col-md-4">
-						<div class="mobilisation-blog animate-box">
+						<div class="Partnerships-blog animate-box">
 							<a href="#"><img class="img-responsive" src="img/PL.jpeg" alt=""></a>
-							<div class="mobilisation-text">
+							<div class="Partnerships-text">
 								<div class="prod-title">
 									<h3 style = "font-family: Times;" ><a href=""#> Charity Polo Events</a></h3>
 									<span class="posted_by">Royal Marang Hotel</span>
