--- a/networks.html
+++ b/networks.html
@@ -39,7 +39,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="advocacy.html">Advocacy</a></li>
-                    <li><a href="mobilisation.html">Mobilisation</a></li>
+                    <li><a href="Partnerships.html">Partnerships</a></li>
                     <li class="fh5co-active"><a href="networks.html">Networks</a></li>
                 </ul>
             </nav>
@@ -68,8 +68,8 @@
                 <div id="justify" class="row row-bottom-padded-md">
 
                     <div class="col-md-3 col-sm-6 col-padding animate-box fadeInRight animated" data-animate-effect="fadeInRight">
-                        <div class="Partnerships-entry">
-							<a data-toggle="modal" data-target="network-popup1" class="Partnerships-img"><img src="img/Ambassador.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+                        <div class="Partner-entry">
+							<a data-toggle="modal" data-target="network-popup1" class="Partner-img"><img src="img/Ambassador.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3 style = "font-family: Times;"><a href="#">Ambassadors</a></h3>
 								<span style = "font-family: Optima;"><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
@@ -112,7 +112,7 @@
 								</div>
 											</div>
                     <div class="col-md-3 col-sm-6 col-padding animate-box fadeInRight animated" data-animate-effect="fadeInRight">
-                        <div class="Partnerships-entry">
+                        <div class="Partner-entry">
 							<a data-toggle="modal" data-target="#network-popup2" class="Partnerships-img"><img src="img/Ambassador.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3 style = "font-family: Times;"><a href="#">Ambassadors</a></h3>
@@ -156,7 +156,7 @@
 								</div>
 											</div>
                     <div class="col-md-3 col-sm-6 col-padding animate-box fadeInRight animated" data-animate-effect="fadeInRight">
-                        <div class="Partnerships-entry">
+                        <div class="Partner-entry">
 							<a data-toggle="modal" data-target="#network-popup3" class="Partnerships-img"><img src="img/Ambassador.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
 							<div class="desc">
 								<h3 style = "font-family: Times;"><a href="#">Ambassadors</a></h3>
