--- a/partnerships.html
+++ b/partnerships.html
@@ -58,7 +58,7 @@
 
                 <div class="section">
 					<div class="content">
-					  <img src="img/Dakla.jpg" alt="Blog Image">
+					  <img src="img/NF.jpg" alt="Blog Image">
 					  <h2>Heading</h2>
 					  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper velit et sem sagittis, in posuere neque semper.</p>
 					</div>
