--- a/partnerships.html
+++ b/partnerships.html
@@ -59,8 +59,8 @@
                 <div class="section">
 					<div class="content">
 					  <img src="img/Dakla.jpg" alt="Blog Image">
-					  <h2>Heading</h2>
-					  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper velit et sem sagittis, in posuere neque semper.</p>
+					  <h2 style = "font-family: Times;" >Heading</h2>
+					  <p style = "font-family: Optima;" > “Individually we’re one drop, but together we’re an ocean.” – Ryonosoke Satoro,</p>
 					</div>
 				  </div>
                 
