--- a/networks.html
+++ b/networks.html
@@ -60,8 +60,8 @@
                 <div class="section">
   				  <div class="content">
     				  <img src="img/Dakla.jpg" alt="Blog Image">
-   						   <h2>Heading</h2>
-     						 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper velit et sem sagittis, in posuere neque semper.</p>
+   						   <h2 style = "font-family: Times;">Networks</h2>
+     						 <p style = "font-family: Optima;" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper velit et sem sagittis, in posuere neque semper.</p>
     </div>
             </div>
 
