--- a/networks.html
+++ b/networks.html
@@ -57,8 +57,8 @@
         <div id="main">
             <div class="narrow-content">
 
-                <div class="section">
-  				  <div class="content">
+                <div class="sectionH">
+  				  <div class="contentH">
     				  <img src="img/Dakla.jpg" alt="Blog Image">
    						   <h2 style = "font-family: Times;">Networks</h2>
      						 <p style = "font-family: Optima;" >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam semper velit et sem sagittis, in posuere neque semper.</p>
