--- a/partnerships.html
+++ b/partnerships.html
@@ -56,8 +56,8 @@
         <div id="main">
             <div class="narrow-content">
 
-                <div class="section">
-					<div class="content">
+                <div class="sectionH">
+					<div class="contentH">
 					  <img src="img/Dakla.jpg" alt="Blog Image">
 					  <h2 style = "font-family: Times;" >Heading</h2>
 					  <p style = "font-family: Optima;" > “Individually we’re one drop, but together we’re an ocean.” – Ryonosoke Satoro,</p>
