--- a/advocacy.html
+++ b/advocacy.html
@@ -56,8 +56,8 @@
         </aside>
         <div id="main">
       
-           <div class="section">
-    <div class="content">
+           <div class="sectionH">
+    <div class="contentH">
       <img src="img/Dakla.jpg" alt="Blog Image">
       <h2>Advocacy</h2>
       <p>“When the world is silent, even one voice becomes powerful.”- Malala Yousafzai. ...</p>
