--- a/advocacy.html
+++ b/advocacy.html
@@ -32,8 +32,9 @@
         <aside id="side-nav">
             <img src="img/DP.jpg" alt="" srcset="">
             <h1 id="logo">
-                <a href="index.html">Tirelo Molotlegi</a>
-            </h1>
+              <span>T</span>irelo
+                      <span>M</span>olotlegi
+                  </h1>
             <hr>
             <nav id="main-menu">
                 <ul>
