--- a/networks.html
+++ b/networks.html
@@ -31,8 +31,9 @@
         <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
         <aside id="side-nav">
             <img src="img/DP.jpg" alt="" srcset="">
-            <h1 id="logo">
-                <a href="index.html">Tirelo Molotlegi</a>
+			<h1 id="logo">
+				<span>T</span>irelo
+                <span>M</span>olotlegi
             </h1>
             <hr>
             <nav id="main-menu">
