--- a/partnerships.html
+++ b/partnerships.html
@@ -31,7 +31,8 @@
         <aside id="side-nav">
             <img src="img/DP.jpg" alt="" srcset="">
             <h1 id="logo">
-                <a href="index.html">Tirelo Molotlegi</a>
+				<span>T</span>irelo
+                <span>M</span>olotlegi
             </h1>
             <hr>
             <nav id="main-menu">
