--- a/advocacy.html
+++ b/advocacy.html
@@ -56,15 +56,15 @@
             </div>
         </aside>
         <div id="main">
-      
+          <div class="narrow-content">
            <div class="sectionH">
-    <div class="contentH">
-      <img src="img/Dakla.jpg" alt="Blog Image">
-      <h2>Advocacy</h2>
-      <p>“When the world is silent, even one voice becomes powerful.”- Malala Yousafzai. ...</p>
-    </div>
+           <div class="contentH">
+           <img src="img/Dakla.jpg" alt="Blog Image">
+           <h2>Advocacy</h2>
+           <p>“When the world is silent, even one voice becomes powerful.”- Malala Yousafzai. ...</p>
+           </div>
             </div>
-            <div class="story-entry padding">
+            <div class="story-entry padding animate-box" >
                 <img src="img/BDI.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
@@ -99,7 +99,7 @@
                     </div>
             </div>
             <hr>
-            <div class="story-entry padding">
+            <div class="story-entry padding animate-box">
                 <img src="img/Ambassador.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
@@ -131,7 +131,7 @@
                     </div>
             </div>
             <hr>
-            <div class="story-entry padding">
+            <div class="story-entry padding animate-box">
                 <img src="img/andbank-1.jpg" alt="">
                 <div>
                     <span class="story-post-date">October 12, 2023</span>
@@ -165,6 +165,7 @@
             <hr>
         </div>
     </div>
+  </div>
 
     <div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
