--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
                 <div class="about-me__text middle">
                   <div class="about-me-slider">
                     <div class="about-me-single-slide">
-                      <h2>About me</h2>
-                      <p><span>H</span> e has work appearing or forthcoming in over a dozen venues,
-                         including Buzzy Mag, The Spirit of Poe, and the British Fantasy Society journal 
-                         Dark Horizons. He is also CEO of a company, specializing in custom book publishing 
-                         and social media marketing services, have created a community for authors to learn 
-                         and connect.He has work appearing or forthcoming in over a dozen venues, including 
-                         Buzzy Mag, The Spirit of Poe, and have created a community for authors to learn and connect.</p>
-                      <h4>Author</h4>
-                      <h2>About me 2</h2>
-                      <p><span>H</span> e has work appearing or forthcoming in over a dozen venues, including 
-                        Buzzy Mag, The Spirit of Poe, and the British Fantasy Society journal Dark Horizons. 
-                        He is also CEO of a company, specializing in custom book publishing and social media 
-                        marketing services, have created a community for authors to learn and connect.He has 
-                        work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit 
-                        of Poe, and have created a community for authors to learn and connect.</p>
-                      <h4>Author</h4>
+                      <h2>Princess Tirelo Molotlegi</h2>
+                      <p><span>A</span>s the youngest child of Kgosi Edward Patrick Lebone II and Queen Mother 
+                        Semane Bonolo Molotlegi Princess Tirelo has lived experiences of historical trials, 
+                        tribulations, and triumphs. Her enchanting title as the princess royale belies the 
+                        true grit of a fighter and survivor of many situations that fed her passion for 
+                        compassionate service. Her proximity to her mother, Queen Mother Semane Molotlegi, 
+                        nurtured her purpose as a community builder, a values-based strategist and advocate 
+                        for equity and social inclusion.</p>
+                      <h2>Biography</h2>
+                      <p><span>H</span>aving been educated in South Africa and Switzerland, Princess Tirelo is most 
+                        popularly celebrated for her visionary leadership within the Royal Bafokeng Nation. A hat she 
+                        wears with pride, engagement, and an appetite to create an environment filled with hope and 
+                        possibility. She is testament to how a powerful platform can be exercised to influence change 
+                        for the good of humanity, one small village and community at a time. Her confidence and courage 
+                        propelled her to work tirelessly and constantly seek ambitious heights. </p>
+                      <h4></h4>
                     </div>
                   </div>
                 </div>
