--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
                 <article class="portfolio-wrapper right">         
                   <div class="portfolio__bottom">
                     <div class="portfolio__name">
-                      <span>T</span>
-                      <h2>irelo</h2>
-                      <h2><span>M</span>olotlegi</h2>
+                      <span>T
+                        E
+                      </span>
+                      <h2>xposure</h2>
+                      <h2><span>E</span>ducation</h2>
                     </div>
-                    <p>Tirelo Molotlegi is a short story author, novelist, and award-winning poet.</p>
+                    <p> are the tools needed to pioneer New Grounds, where limitations dont existent. </p>
                   </div>
                   <div class="portfolio__img">
                     <img src="./img/DP.jpg" class="about-me__profile" alt="about me profile picture">
