--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                 <article class="portfolio-wrapper right">         
                   <div class="portfolio__bottom">
                     <div class="portfolio__name">
-                      <span>T
-                        E
+                      <span>E
                       </span>
                       <h2>xposure</h2>
                       <h2><span>E</span>ducation</h2>
